src/objects/Grant_Award__c.object
<CustomObject>
    <fields>
        <fullName>Total_Amount_in_funding_agreement__c</fullName>
        <inlineHelpText>For Recipient Type: Organisation. The total amount in pounds of the grant award that was comitted in the grant award agreement.</inlineHelpText>
        <label>Total Amount in funding agreement in GBP</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Value_Budgeted_in_GBP__c</fullName>
        <description>This is the Total Value Budgeted in GBP for grant awards for individuals.</description>
        <inlineHelpText>For Recipient Type: Individuals. The total amount in pounds of the grant award that was budgeted. This is the total amount paid to all individuals receiving a grant added together.</inlineHelpText>
        <label>Total Value Budgeted in GBP</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_amount_per_year__c</fullName>
        <formula>Total_Amount_in_funding_agreement__c / Award_Duration_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total amount per year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_value_per_year__c</fullName>
        <formula>Total_Value_Budgeted_in_GBP__c /  Award_Duration_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total value per year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Grant Award</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Grant_Award_Reference_Number__c</columns>
        <columns>Grant_Award_Name_Link__c</columns>
        <columns>Grant_Scheme_Name_Link__c</columns>
        <columns>Recipient__c</columns>
        <columns>Total_Amount_in_funding_agreement__c</columns>
        <columns>Total_Value_Budgeted_in_GBP__c</columns>
        <columns>Award_Start_Date__c</columns>
        <columns>Award_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Department_s_Data</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Grant_Award_Reference_Number__c</columns>
        <columns>Grant_Award_Name_Link__c</columns>
        <columns>Grant_Scheme_Name_Link__c</columns>
        <columns>Recipient__c</columns>
        <columns>Total_Amount_in_funding_agreement__c</columns>
        <columns>Total_Value_Budgeted_in_GBP__c</columns>
        <columns>Award_Start_Date__c</columns>
        <columns>Award_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_My_Department_Data__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Department&apos;s Data</label>
    </listViews>
    <nameField>
        <displayFormat>GA-{000000}</displayFormat>
        <label>System Award Reference No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Awards</pluralLabel>
    <recordTypes>
        <fullName>Individual_Award</fullName>
        <active>true</active>
        <description>Select Recipient type - &apos;Individual&apos; to create a grant award awarded to multiple individuals, rather than organisations. Their personal details are not required, just input the number of recipients for the grant award.</description>
        <label>Individual Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organisation_Award</fullName>
        <active>true</active>
        <description>Select Recipient type - &apos;Organisation&apos; to create a grant award awarded to an organisation. You will need to have created the Organisation first from the Organisations tab in order to be able to select it as grant award recipient.</description>
        <label>Organisation Award</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Address_is_mandatory</fullName>
        <active>true</active>
        <description>Recipient Secondary Country is mandatory</description>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , NOT(Get_existing_organisation_address__c)
 , RecordType.Name != &apos;Individual Award&apos;
 , OR(
  ISBLANK(Recipient_Secondary_Address_1__c)
  , ISBLANK(Recipient_Secondary_City__c)
  , ISBLANK(TEXT(Recipient_Secondary_Country__c))
  , ISBLANK(Recipient_Secondary_Postal_Code__c)
 )
)</errorConditionFormula>
        <errorMessage>Address 1, City, Country and Postal Code are mandatory for Grant Award record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>All_Fields_Are_Locked_Apart_From_Eval</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c)
 , NOT( $Profile.Name = &apos;System Administrator&apos;), NOT($Setup.Bypass__c.Business_Rules_for_Edit_and_Delete__c)
 , ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;)
 , NOT(ISNEW())
 , OR(
    AND(
     ISCHANGED(Award_End_Date__c)
     , (TODAY() -  PRIORVALUE(Award_End_Date__c)) &gt; 365
    )
    , AND(
     NOT(ISCHANGED(Award_End_Date__c))
     , (TODAY() -  Award_End_Date__c) &gt; 365
    )
   )
 , AND(
  NOT(ISCHANGED(Award_Objectives_Achieved__c)),
  NOT(ISCHANGED(Recipient_Organisation_Service_Score__c)),
  NOT(ISCHANGED(Reason_for_Given_Answer__c)),
  NOT(ISCHANGED(Reason_For_Given_Score__c)),
  NOT(ISCHANGED(Score_In_Dispute__c))
 )
)</errorConditionFormula>
        <errorMessage>This record is locked. Please create a case or contact the grants hub support in order to modify this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allocation_Method_is_mandatory</fullName>
        <active>true</active>
        <description>This is the validation rule to make sure Allocation method is provided by the users</description>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , ISBLANK(TEXT( Allocation_Method__c ))
)</errorConditionFormula>
        <errorDisplayField>Allocation_Method__c</errorDisplayField>
        <errorMessage>Allocation Method is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Award_End_Date_is_mandatory</fullName>
        <active>true</active>
        <description>Award End Date field is mandatory.</description>
        <errorConditionFormula>AND( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , ISBLANK(Award_End_Date__c) 
)</errorConditionFormula>
        <errorDisplayField>Award_End_Date__c</errorDisplayField>
        <errorMessage>Award End Date field is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Award_Start_Date_is_mandatory</fullName>
        <active>true</active>
        <description>Award Start Date field is mandatory.</description>
        <errorConditionFormula>AND( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , ISBLANK(Award_Start_Date__c) 
)</errorConditionFormula>
        <errorDisplayField>Award_Start_Date__c</errorDisplayField>
        <errorMessage>Award Start Date field is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Department_Check_on_create</fullName>
        <active>true</active>
        <description>This is a global validation rule to stop users from updating other department&apos;s record.</description>
        <errorConditionFormula>AND ( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;)
 , ISNEW()
 , NOT( Grant_Scheme__r.Is_My_Department_Data__c )
 , NOT( $Profile.Name = &apos;System Administrator&apos;)
)</errorConditionFormula>
        <errorDisplayField>Grant_Scheme__c</errorDisplayField>
        <errorMessage>You don&apos;t have update privilege on the related Grant Scheme record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Department_Check_on_update</fullName>
        <active>true</active>
        <description>This is a global validation rule to stop users from updating other department&apos;s record.</description>
        <errorConditionFormula>AND ( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;)
 , NOT(ISNEW())
 , NOT( Grant_Scheme__r.Is_My_Department_Data__c )
 , NOT( $Profile.Name = &apos;System Administrator&apos;) 
)</errorConditionFormula>
        <errorMessage>You don&apos;t have update privilege on this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Evaluation_fields_are_locked</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c)
 , NOT($Setup.Bypass__c.Business_Rules_for_Edit_and_Delete__c)
 , ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;)
 , NOT(ISNEW())
 , OR((TODAY() - DATEVALUE(Evaluation_Modified_Date_by_Portal_User__c)) = 0         
, (TODAY() - DATEVALUE(Evaluation_Modified_Date_by_Portal_User__c)) &gt; 2)
 , OR(
   ISCHANGED(Award_Objectives_Achieved__c)
   , ISCHANGED(Recipient_Organisation_Service_Score__c)
   , ISCHANGED(Reason_for_Given_Answer__c)
   , ISCHANGED(Reason_For_Given_Score__c)
   , ISCHANGED(Score_In_Dispute__c)
 )
)</errorConditionFormula>
        <errorMessage>Evaluation fields cannot be modified. Please create a case or contact the grants hub support in order to modify this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grant_agreement_is_mandatory</fullName>
        <active>true</active>
        <description>Against criteria from grant agreement field is mandatory if and only if Grant monitored field value is equal to &apos;Yes&apos;.</description>
        <errorConditionFormula>AND( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 ,  RecordType.Name == &apos;Organisation Award&apos;
 , ISPICKVAL(Is_The_Grant_Monitored__c, &apos;Yes&apos;)
 , ISBLANK(TEXT(Against_Criteria_From_Grant_Agreement__c)) 
)</errorConditionFormula>
        <errorDisplayField>Against_Criteria_From_Grant_Agreement__c</errorDisplayField>
        <errorMessage>Against criteria from grant agreement field is mandatory if and only if Grant monitored field value is equal to &apos;Yes&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grant_agreement_should_be_blank</fullName>
        <active>true</active>
        <description>Against criteria from grant agreement field should be &apos;No&apos; if and only if Grant monitored field value is equal to &apos;No&apos;.</description>
        <errorConditionFormula>AND( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , RecordType.Name == &apos;Organisation Award&apos;
 , ISPICKVAL(Is_The_Grant_Monitored__c, &apos;No&apos;) 
 , Not(
  ISPICKVAL(Against_Criteria_From_Grant_Agreement__c, &apos;No&apos;) 
 )
 , NOT(
  ISBLANK(TEXT(Against_Criteria_From_Grant_Agreement__c))
 ) 
)</errorConditionFormula>
        <errorDisplayField>Against_Criteria_From_Grant_Agreement__c</errorDisplayField>
        <errorMessage>&apos;Against criteria from grant agreement&apos; field should be &apos;No&apos; if and only if &apos;Grant monitored&apos; field value is equal to &apos;No&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Instalment_Payment_Is_Milestone_Pay</fullName>
        <active>true</active>
        <description>If Installment Payment Is Milestone Payment and If installment  payments is N/A throw error.</description>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c),
 ISPICKVAL(Payment_Frequency__c,&apos;Milestone payments&apos;),
 ISPICKVAL(If_Instalments_Payments__c, &apos;n/a&apos;)  
)</errorConditionFormula>
        <errorMessage>If Payment frequency is Milestone payments then If Installment payments should be monthly OR quarterly OR year OR other but not N/A .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Instalment_Payment_should_be_Blank</fullName>
        <active>false</active>
        <description>GEPDS-772 - If payment freq = &apos;upfront payment&apos;, and &apos;If installments&apos; field has any valid value in it (like &apos;quarterly&apos;), the upload succeeds and updates the object.</description>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , NOT(ISBLANK(TEXT(Payment_Frequency__c)))
 , NOT(ISPICKVAL(Payment_Frequency__c, &apos;Instalment payments&apos;))
 , NOT(ISBLANK(TEXT(If_Instalments_Payments__c)))
 , NOT(ISPICKVAL(If_Instalments_Payments__c, &apos;n/a&apos;))
)</errorConditionFormula>
        <errorDisplayField>If_Instalments_Payments__c</errorDisplayField>
        <errorMessage>&apos;If instalment payments&apos; field should be blank or &apos;n/a&apos; on record creation when your Payment frequency is not &apos;Instalment payments&apos; and it should be &apos;n/a&apos; on amending the record when your Payment frequency is not &apos;Instalment payments&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Instalments_payments_is_mandatory</fullName>
        <active>true</active>
        <description>If instalments payments field is mandatory if the &quot;Instalments payments&quot; is selected for Payment_Frequency__c</description>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , ISPICKVAL(Payment_Frequency__c, &apos;Instalment payments&apos;)
 , OR(
    ISBLANK(TEXT(If_Instalments_Payments__c))
    , ISPICKVAL(If_Instalments_Payments__c, &apos;n/a&apos;)
   )
)</errorConditionFormula>
        <errorDisplayField>If_Instalments_Payments__c</errorDisplayField>
        <errorMessage>&apos;If instalment payment&apos; field is mandatory if &apos;Payment Frequency&apos; is equal to &apos;Instalment payments&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mode_of_monitoring_is_mandatory</fullName>
        <active>true</active>
        <description>Mode of monitoring field is mandatory if and only if Grant monitored field value is equal to &apos;Yes&apos;.</description>
        <errorConditionFormula>AND( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , NOT(ISBLANK(TEXT(Is_The_Grant_Monitored__c)))
 , NOT(ISPICKVAL(Is_The_Grant_Monitored__c, &apos;No&apos;))
 , ISBLANK(Mode_of_Monitoring__c) 
)</errorConditionFormula>
        <errorDisplayField>Mode_of_Monitoring__c</errorDisplayField>
        <errorMessage>Mode of monitoring field is mandatory if and only if Grant monitored field value is equal to &apos;Yes/Partially&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mode_of_monitoring_should_be_blank</fullName>
        <active>true</active>
        <description>&apos;Mode of Monitoring&apos; field should be blank or &quot;n/a&quot; on record creation when &apos;Is the grant monitored&apos; is &quot;No&quot; and it should be &quot;n/a&quot; on amending the record when &apos;Is the grant monitored&apos; is &quot;No&quot;</description>
        <errorConditionFormula>AND( 
 NOT($Setup.Bypass__c.Validation_Rules__c)
 , NOT(ISBLANK(TEXT(Is_The_Grant_Monitored__c)))
 , ISPICKVAL(Is_The_Grant_Monitored__c, &apos;No&apos;) 
 , NOT(INCLUDES(Mode_of_Monitoring__c, &apos;n/a&apos;)) 
 , NOT(ISBLANK(Mode_of_Monitoring__c)) 
)</errorConditionFormula>
        <errorDisplayField>Mode_of_Monitoring__c</errorDisplayField>
        <errorMessage>&apos;Mode of Monitoring&apos; field should be blank or &apos;n/a&apos; on record creation when &apos;Is the grant monitored&apos; is &apos;No&apos; and it should be &apos;n/a&apos; on amending the record when &apos;Is the grant monitored&apos; is &apos;No&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_one_address_value_is_valid</fullName>
        <active>false</active>
        <description>Only one value for address is valid. You cannot select &quot;Get existing organisation address&quot; for Grant Awards with addresses.</description>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , Get_existing_organisation_address__c
 , OR(
  NOT(ISBLANK(Recipient_Secondary_Address_1__c))
  , NOT(ISBLANK(Recipient_Secondary_Address_2__c))
  , NOT(ISBLANK(Recipient_Secondary_City__c))
  , NOT(ISBLANK(Recipient_Secondary_County__c))
  , NOT(ISBLANK(TEXT(Recipient_Secondary_Country__c)))
  , NOT(ISBLANK(Recipient_Secondary_Postal_Code__c))
 )
)</errorConditionFormula>
        <errorDisplayField>Get_existing_organisation_address__c</errorDisplayField>
        <errorMessage>Grant Award has values for address fields, You cannot select &quot;Get existing organisation address&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_for_no_monitoring_is_mandatory</fullName>
        <active>true</active>
        <description>Reason for No monitoring field is mandatory if and only if Grant monitored field value is equal to &apos;No&apos;.</description>
        <errorConditionFormula>AND( 
 NOT($Setup.Bypass__c.Validation_Rules__c)
 , NOT(ISBLANK(TEXT(Is_The_Grant_Monitored__c)))
 , NOT(ISPICKVAL(Is_The_Grant_Monitored__c, &apos;Yes&apos;))
 , ISBLANK(Reason_For_No_Monitoring__c) 
)</errorConditionFormula>
        <errorDisplayField>Reason_For_No_Monitoring__c</errorDisplayField>
        <errorMessage>Reason for No monitoring field is mandatory if and only if Grant monitored field value is equal to &apos;No/Partially&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_for_no_monitoring_should_be_blank</fullName>
        <active>true</active>
        <description>Reason for No monitoring&apos; field should be blank or &quot;n/a&quot; on record creation when &quot;Is the grant monitored&quot; is &quot;Yes&quot; and it should be &quot;n/a&quot; on amending the record when &quot;Is the grant monitored&quot; is &quot;Yes&quot;</description>
        <errorConditionFormula>AND( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , ISPICKVAL(Is_The_Grant_Monitored__c, &apos;Yes&apos;) 
 , NOT(ISBLANK( Reason_For_No_Monitoring__c )) 
 , Reason_For_No_Monitoring__c != &apos;n/a&apos;
)</errorConditionFormula>
        <errorDisplayField>Reason_For_No_Monitoring__c</errorDisplayField>
        <errorMessage>&apos;Reason for No monitoring&apos; field should be blank or &apos;n/a&apos; on record creation when &apos;Is the grant monitored&apos; is &apos;Yes&apos; and it should be &apos;n/a&apos; on amending the record when &apos;Is the grant monitored&apos; is &apos;Yes&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Selected_Recipient_Without_Addrress</fullName>
        <active>true</active>
        <description>This validation makes sure that the selected recipient for the Grant Has addres</description>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , Get_existing_organisation_address__c
 , OR(
  ISBLANK( Recipient__r.Primary_Address_1__c )
  , ISBLANK( Recipient__r.Primary_City__c )
  , ISBLANK(TEXT( Recipient__r.Primary_Country__c ))
  , ISBLANK( Recipient__r.Primary_Postal_Code__c )
 )
)</errorConditionFormula>
        <errorDisplayField>Get_existing_organisation_address__c</errorDisplayField>
        <errorMessage>Selected Recipient doesn&apos;t have any values for the address field and cannot be used with Get existing organisation address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_is_earlier_than_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , Award_Start_Date__c &gt; Award_End_Date__c
)</errorConditionFormula>
        <errorMessage>The award start date should be earlier than the award end date. Please correct your award end date.</errorMessage>
    </validationRules>
</CustomObject>